Regression: VSE freeze when changing the source of an image with thumbnails enabled #99091

Closed
opened 2022-06-22 13:32:18 +02:00 by Albert · 10 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691

Caused by 7d1a10a9bb

Short description of error
Having thumbnails turned on for your strips in the VSE causes Blender to crash if you try to change the source file of an image.

Exact steps for others to reproduce the error

  • Go to the Video Sequencer window
  • Enable thumbnails in the 'Sequencer Overlays' drop-down
  • Add an image to the VSE timeline
  • In the 'Source' header in its properties, click 'Change Data/Files'
  • Choose a different image
  • Blender Crashes (or completely freezes, as Windows reports it as not responding, and Blender doesn't generate a crash log)

This is reproducible 100% of the time for me.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Caused by 7d1a10a9bb **Short description of error** Having thumbnails turned on for your strips in the VSE causes Blender to crash if you try to change the source file of an image. **Exact steps for others to reproduce the error** - Go to the Video Sequencer window - Enable thumbnails in the 'Sequencer Overlays' drop-down - Add an image to the VSE timeline - In the 'Source' header in its properties, click 'Change Data/Files' - Choose a different image - Blender Crashes (or completely freezes, as Windows reports it as not responding, and Blender doesn't generate a crash log) This is reproducible 100% of the time for me.
Author

Added subscriber: @owbosh

Added subscriber: @owbosh
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Seems to be stuck here.

20220622-134141.png

Seems to be stuck here. ![20220622-134141.png](https://archive.blender.org/developer/F13216668/20220622-134141.png)
Omar Emara changed title from VSE Thumbnails Crash to VSE freeze when changing the source of an image with thumbnails enabled 2022-06-22 13:43:32 +02:00
Member

Added subscribers: @iss, @lichtwerk

Added subscribers: @iss, @lichtwerk
Member

Caused by 7d1a10a9bb

CC @iss

Caused by 7d1a10a9bb CC @iss
Philipp Oeser changed title from VSE freeze when changing the source of an image with thumbnails enabled to Regression: VSE freeze when changing the source of an image with thumbnails enabled 2022-06-22 22:34:46 +02:00

This issue was referenced by 32481a5732

This issue was referenced by 32481a5732f2ce785c7a8b27145683391513c003

This issue was referenced by d1ea39aac7

This issue was referenced by d1ea39aac77203a2f7517b3d0d2ec56ee2e30a22

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-23 17:50:23 +02:00

Just a note, that this is not caused by 7d1a10a9bb - it was likely issue since first implementation of thumbnail drawing. It's likely, that before this commit thumbnails were not drawn unless you zoom in timeline a bit.

Just a note, that this is not caused by 7d1a10a9bb - it was likely issue since first implementation of thumbnail drawing. It's likely, that before this commit thumbnails were not drawn unless you zoom in timeline a bit.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99091
No description provided.